Support arrays in callDBus method of KWin Scripting

Thanks to Jan Palus for providing the patch.

BUG: 311896
FIXED-IN: 4.10